--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
