--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'Montserrat';
+  font-weight: normal;
+  font-style: normal;
+  src:  url("./font/montserrat-regular.woff") format("woff"),
+        url("./font/montserrat-regular.ttf") format("truetype"),
+        url("./font/montserrat-regular.svg") format("svg");
+}
+
+:root {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
+}
+
 .App {
   width: 100%;
   height: 100vh;
