--- a/src/ConvertForm/ConvertForm.module.css
+++ b/src/ConvertForm/ConvertForm.module.css
@@ -4,7 +4,8 @@
 }
 
 .head {
-
+    font-size: 24px;
+    line-height: 29px;
 }
 
 .form {
@@ -13,11 +14,56 @@
     align-items: center;
 }
 
+.input_wrap {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+}
+
+.input_noun {
+    width: 500px;
+    font-size: 19px;
+    line-height: 23px;
+    margin-bottom: 20px;
+}
+
 .radio_group {
     display: flex;
     flex-flow: column nowrap;
 }
 
+.radio {
+    font-size: 19px;
+    line-height: 23px;
+    margin: 0 15px 10px 0;
+}
+
 .button {
     align-self: center;
+    font-size: 20px;
+    line-height: 24px;
+    padding: 8px 20px;
+    margin-top: 20px;
+    outline: none;
+    background-color: #259bf5;
+    color: #ffffff;
+    border-radius: 3px;
+    border: 1px solid #259bf5;
+    box-sizing: border-box;
+}
+
+.button:hover {
+    border: 1px solid #114e7c;
+}
+
+.button:active {
+    border: 2px solid #114e7c;
+}
+
+.result {
+    text-decoration: underline;
+    color: #259bf5;
+    margin-left: 10px;
+    font-size: 29px;
+    line-height: 32px;
 }
